big_money_moves/yacc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> whole
Rule 1     charlist -> charlist CHAR
Rule 2     charlist -> charlist CHAR MINUS CHAR
Rule 3     charlist -> <empty>
Rule 4     phrase -> phrase state
Rule 5     phrase -> <empty>
Rule 6     whole -> start expr end
Rule 7     start -> START
Rule 8     start -> <empty>
Rule 9     quantifier -> ONEORMANY
Rule 10    quantifier -> NULORMANY
Rule 11    quantifier -> LCURLY BARSD RCURLY
Rule 12    quantifier -> LCURLY BARSD COMMA RCURLY
Rule 13    quantifier -> LCURLY COMMA BARSD RCURLY
Rule 14    quantifier -> LCURLY BARSD COMMA BARSD RCURLY
Rule 15    quantifier -> <empty>
Rule 16    charclass -> LBRACKET charlist CHAR RBRACKET
Rule 17    end -> END
Rule 18    end -> <empty>
Rule 19    charclass -> EXCEPTOPTS charlist CHAR RBRACKET
Rule 20    state -> WILDCARD
Rule 21    state -> BARSS
Rule 22    state -> BARLS
Rule 23    state -> BARSW
Rule 24    state -> BARLW
Rule 25    state -> BARSD
Rule 26    state -> BARLD
Rule 27    state -> BARN
Rule 28    state -> BART
Rule 29    state -> SPACE
Rule 30    state -> CHAR
Rule 31    state -> charclass
Rule 32    state -> LITERALBAR END
Rule 33    state -> LITERALBAR START
Rule 34    state -> LITERALBAR LITERALBAR
Rule 35    state -> LITERALBAR ONEORMANY
Rule 36    state -> LITERALBAR NULORMANY
Rule 37    state -> LITERALBAR OR
Rule 38    state -> LITERALBAR LBRACKET
Rule 39    state -> LITERALBAR RBRACKET
Rule 40    state -> MINUS
Rule 41    state -> LITERALBAR LCURLY
Rule 42    state -> LITERALBAR RCURLY
Rule 43    state -> LITERALBAR NULORONE
Rule 44    state -> LITERALBAR COLON
Rule 45    state -> LITERALBAR LPARENTHESIS
Rule 46    state -> LITERALBAR RPARENTHESIS
Rule 47    expropt -> NULORONE
Rule 48    expropt -> <empty>
Rule 49    expr -> expr alternative miniexpr expropt
Rule 50    expr -> expr alternative miniexpr
Rule 51    expr -> expr miniexpr expropt
Rule 52    expr -> expr miniexpr
Rule 53    expr -> <empty>
Rule 54    capture_group -> LPARENTHESIS expr RPARENTHESIS
Rule 55    capture_group -> LPARENTHESIS EXCEPTCAPTURE expr RPARENTHESIS
Rule 56    capture_group -> LPARENTHESIS EXCEPTLOOKAHEADPOS expr RPARENTHESIS
Rule 57    capture_group -> LPARENTHESIS EXCEPTLOOKAHEADNEG expr RPARENTHESIS
Rule 58    capture_group -> LPARENTHESIS EXCEPTLOOKBEHINDPOS expr RPARENTHESIS
Rule 59    capture_group -> LPARENTHESIS EXCEPTLOOKBEHINDNEG expr RPARENTHESIS
Rule 60    alternative -> OR
Rule 61    alternative -> <empty>
Rule 62    wtfamidoinghere -> phrase state
Rule 63    wtfamidoinghere -> capture_group
Rule 64    wtfamidoinghere -> <empty>
Rule 65    miniexpr -> miniexpr wtfamidoinghere quantifier
Rule 66    miniexpr -> <empty>

Terminals, with rules where they appear

BARLD                : 26
BARLS                : 22
BARLW                : 24
BARN                 : 27
BARSD                : 11 12 13 14 14 25
BARSS                : 21
BARSW                : 23
BART                 : 28
CHAR                 : 1 2 2 16 19 30
COLON                : 44
COMMA                : 12 13 14
END                  : 17 32
EXCEPTCAPTURE        : 55
EXCEPTLOOKAHEADNEG   : 57
EXCEPTLOOKAHEADPOS   : 56
EXCEPTLOOKBEHINDNEG  : 59
EXCEPTLOOKBEHINDPOS  : 58
EXCEPTOPTS           : 19
LBRACKET             : 16 38
LCURLY               : 11 12 13 14 41
LITERALBAR           : 32 33 34 34 35 36 37 38 39 41 42 43 44 45 46
LPARENTHESIS         : 45 54 55 56 57 58 59
MINUS                : 2 40
NULORMANY            : 10 36
NULORONE             : 43 47
ONEORMANY            : 9 35
OR                   : 37 60
RBRACKET             : 16 19 39
RCURLY               : 11 12 13 14 42
RPARENTHESIS         : 46 54 55 56 57 58 59
SPACE                : 29
START                : 7 33
WILDCARD             : 20
error                : 

Nonterminals, with rules where they appear

alternative          : 49 50
capture_group        : 63
charclass            : 31
charlist             : 1 2 16 19
end                  : 6
expr                 : 6 49 50 51 52 54 55 56 57 58 59
expropt              : 49 51
miniexpr             : 49 50 51 52 65
phrase               : 4 62
quantifier           : 65
start                : 6
state                : 4 62
whole                : 0
wtfamidoinghere      : 65

Parsing method: LALR

state 0

    (0) S' -> . whole
    (6) whole -> . start expr end
    (7) start -> . START
    (8) start -> .

    START           shift and go to state 3
    END             reduce using rule 8 (start -> .)
    OR              reduce using rule 8 (start -> .)
    NULORONE        reduce using rule 8 (start -> .)
    LPARENTHESIS    reduce using rule 8 (start -> .)
    ONEORMANY       reduce using rule 8 (start -> .)
    NULORMANY       reduce using rule 8 (start -> .)
    LCURLY          reduce using rule 8 (start -> .)
    WILDCARD        reduce using rule 8 (start -> .)
    BARSS           reduce using rule 8 (start -> .)
    BARLS           reduce using rule 8 (start -> .)
    BARSW           reduce using rule 8 (start -> .)
    BARLW           reduce using rule 8 (start -> .)
    BARSD           reduce using rule 8 (start -> .)
    BARLD           reduce using rule 8 (start -> .)
    BARN            reduce using rule 8 (start -> .)
    BART            reduce using rule 8 (start -> .)
    SPACE           reduce using rule 8 (start -> .)
    CHAR            reduce using rule 8 (start -> .)
    LITERALBAR      reduce using rule 8 (start -> .)
    MINUS           reduce using rule 8 (start -> .)
    LBRACKET        reduce using rule 8 (start -> .)
    EXCEPTOPTS      reduce using rule 8 (start -> .)
    $end            reduce using rule 8 (start -> .)

    whole                          shift and go to state 1
    start                          shift and go to state 2

state 1

    (0) S' -> whole .



state 2

    (6) whole -> start . expr end
    (49) expr -> . expr alternative miniexpr expropt
    (50) expr -> . expr alternative miniexpr
    (51) expr -> . expr miniexpr expropt
    (52) expr -> . expr miniexpr
    (53) expr -> .

    END             reduce using rule 53 (expr -> .)
    OR              reduce using rule 53 (expr -> .)
    NULORONE        reduce using rule 53 (expr -> .)
    LPARENTHESIS    reduce using rule 53 (expr -> .)
    ONEORMANY       reduce using rule 53 (expr -> .)
    NULORMANY       reduce using rule 53 (expr -> .)
    LCURLY          reduce using rule 53 (expr -> .)
    WILDCARD        reduce using rule 53 (expr -> .)
    BARSS           reduce using rule 53 (expr -> .)
    BARLS           reduce using rule 53 (expr -> .)
    BARSW           reduce using rule 53 (expr -> .)
    BARLW           reduce using rule 53 (expr -> .)
    BARSD           reduce using rule 53 (expr -> .)
    BARLD           reduce using rule 53 (expr -> .)
    BARN            reduce using rule 53 (expr -> .)
    BART            reduce using rule 53 (expr -> .)
    SPACE           reduce using rule 53 (expr -> .)
    CHAR            reduce using rule 53 (expr -> .)
    LITERALBAR      reduce using rule 53 (expr -> .)
    MINUS           reduce using rule 53 (expr -> .)
    LBRACKET        reduce using rule 53 (expr -> .)
    EXCEPTOPTS      reduce using rule 53 (expr -> .)
    $end            reduce using rule 53 (expr -> .)

    expr                           shift and go to state 4

state 3

    (7) start -> START .

    END             reduce using rule 7 (start -> START .)
    OR              reduce using rule 7 (start -> START .)
    NULORONE        reduce using rule 7 (start -> START .)
    LPARENTHESIS    reduce using rule 7 (start -> START .)
    ONEORMANY       reduce using rule 7 (start -> START .)
    NULORMANY       reduce using rule 7 (start -> START .)
    LCURLY          reduce using rule 7 (start -> START .)
    WILDCARD        reduce using rule 7 (start -> START .)
    BARSS           reduce using rule 7 (start -> START .)
    BARLS           reduce using rule 7 (start -> START .)
    BARSW           reduce using rule 7 (start -> START .)
    BARLW           reduce using rule 7 (start -> START .)
    BARSD           reduce using rule 7 (start -> START .)
    BARLD           reduce using rule 7 (start -> START .)
    BARN            reduce using rule 7 (start -> START .)
    BART            reduce using rule 7 (start -> START .)
    SPACE           reduce using rule 7 (start -> START .)
    CHAR            reduce using rule 7 (start -> START .)
    LITERALBAR      reduce using rule 7 (start -> START .)
    MINUS           reduce using rule 7 (start -> START .)
    LBRACKET        reduce using rule 7 (start -> START .)
    EXCEPTOPTS      reduce using rule 7 (start -> START .)
    $end            reduce using rule 7 (start -> START .)


state 4

    (6) whole -> start expr . end
    (49) expr -> expr . alternative miniexpr expropt
    (50) expr -> expr . alternative miniexpr
    (51) expr -> expr . miniexpr expropt
    (52) expr -> expr . miniexpr
    (17) end -> . END
    (18) end -> .
    (60) alternative -> . OR
    (61) alternative -> .
    (65) miniexpr -> . miniexpr wtfamidoinghere quantifier
    (66) miniexpr -> .

  ! shift/reduce conflict for END resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 18 (end -> .)
  ! reduce/reduce conflict for NULORONE resolved using rule 61 (alternative -> .)
  ! reduce/reduce conflict for LPARENTHESIS resolved using rule 61 (alternative -> .)
  ! reduce/reduce conflict for ONEORMANY resolved using rule 61 (alternative -> .)
  ! reduce/reduce conflict for NULORMANY resolved using rule 61 (alternative -> .)
  ! reduce/reduce conflict for LCURLY resolved using rule 61 (alternative -> .)
  ! reduce/reduce conflict for WILDCARD resolved using rule 61 (alternative -> .)
  ! reduce/reduce conflict for BARSS resolved using rule 61 (alternative -> .)
  ! reduce/reduce conflict for BARLS resolved using rule 61 (alternative -> .)
  ! reduce/reduce conflict for BARSW resolved using rule 61 (alternative -> .)
  ! reduce/reduce conflict for BARLW resolved using rule 61 (alternative -> .)
  ! reduce/reduce conflict for BARSD resolved using rule 61 (alternative -> .)
  ! reduce/reduce conflict for BARLD resolved using rule 61 (alternative -> .)
  ! reduce/reduce conflict for BARN resolved using rule 61 (alternative -> .)
  ! reduce/reduce conflict for BART resolved using rule 61 (alternative -> .)
  ! reduce/reduce conflict for SPACE resolved using rule 61 (alternative -> .)
  ! reduce/reduce conflict for CHAR resolved using rule 61 (alternative -> .)
  ! reduce/reduce conflict for LITERALBAR resolved using rule 61 (alternative -> .)
  ! reduce/reduce conflict for MINUS resolved using rule 61 (alternative -> .)
  ! reduce/reduce conflict for LBRACKET resolved using rule 61 (alternative -> .)
  ! reduce/reduce conflict for EXCEPTOPTS resolved using rule 61 (alternative -> .)
  ! shift/reduce conflict for END resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 18 (end -> .)
    END             shift and go to state 8
    $end            reduce using rule 18 (end -> .)
    OR              shift and go to state 9
    NULORONE        reduce using rule 61 (alternative -> .)
    LPARENTHESIS    reduce using rule 61 (alternative -> .)
    ONEORMANY       reduce using rule 61 (alternative -> .)
    NULORMANY       reduce using rule 61 (alternative -> .)
    LCURLY          reduce using rule 61 (alternative -> .)
    WILDCARD        reduce using rule 61 (alternative -> .)
    BARSS           reduce using rule 61 (alternative -> .)
    BARLS           reduce using rule 61 (alternative -> .)
    BARSW           reduce using rule 61 (alternative -> .)
    BARLW           reduce using rule 61 (alternative -> .)
    BARSD           reduce using rule 61 (alternative -> .)
    BARLD           reduce using rule 61 (alternative -> .)
    BARN            reduce using rule 61 (alternative -> .)
    BART            reduce using rule 61 (alternative -> .)
    SPACE           reduce using rule 61 (alternative -> .)
    CHAR            reduce using rule 61 (alternative -> .)
    LITERALBAR      reduce using rule 61 (alternative -> .)
    MINUS           reduce using rule 61 (alternative -> .)
    LBRACKET        reduce using rule 61 (alternative -> .)
    EXCEPTOPTS      reduce using rule 61 (alternative -> .)

  ! END             [ reduce using rule 61 (alternative -> .) ]
  ! OR              [ reduce using rule 61 (alternative -> .) ]
  ! $end            [ reduce using rule 61 (alternative -> .) ]
  ! NULORONE        [ reduce using rule 66 (miniexpr -> .) ]
  ! LPARENTHESIS    [ reduce using rule 66 (miniexpr -> .) ]
  ! ONEORMANY       [ reduce using rule 66 (miniexpr -> .) ]
  ! NULORMANY       [ reduce using rule 66 (miniexpr -> .) ]
  ! LCURLY          [ reduce using rule 66 (miniexpr -> .) ]
  ! WILDCARD        [ reduce using rule 66 (miniexpr -> .) ]
  ! BARSS           [ reduce using rule 66 (miniexpr -> .) ]
  ! BARLS           [ reduce using rule 66 (miniexpr -> .) ]
  ! BARSW           [ reduce using rule 66 (miniexpr -> .) ]
  ! BARLW           [ reduce using rule 66 (miniexpr -> .) ]
  ! BARSD           [ reduce using rule 66 (miniexpr -> .) ]
  ! BARLD           [ reduce using rule 66 (miniexpr -> .) ]
  ! BARN            [ reduce using rule 66 (miniexpr -> .) ]
  ! BART            [ reduce using rule 66 (miniexpr -> .) ]
  ! SPACE           [ reduce using rule 66 (miniexpr -> .) ]
  ! CHAR            [ reduce using rule 66 (miniexpr -> .) ]
  ! LITERALBAR      [ reduce using rule 66 (miniexpr -> .) ]
  ! MINUS           [ reduce using rule 66 (miniexpr -> .) ]
  ! LBRACKET        [ reduce using rule 66 (miniexpr -> .) ]
  ! EXCEPTOPTS      [ reduce using rule 66 (miniexpr -> .) ]
  ! END             [ reduce using rule 66 (miniexpr -> .) ]
  ! OR              [ reduce using rule 66 (miniexpr -> .) ]
  ! $end            [ reduce using rule 66 (miniexpr -> .) ]

    end                            shift and go to state 5
    alternative                    shift and go to state 6
    miniexpr                       shift and go to state 7

state 5

    (6) whole -> start expr end .

    $end            reduce using rule 6 (whole -> start expr end .)


state 6

    (49) expr -> expr alternative . miniexpr expropt
    (50) expr -> expr alternative . miniexpr
    (65) miniexpr -> . miniexpr wtfamidoinghere quantifier
    (66) miniexpr -> .

    NULORONE        reduce using rule 66 (miniexpr -> .)
    LPARENTHESIS    reduce using rule 66 (miniexpr -> .)
    ONEORMANY       reduce using rule 66 (miniexpr -> .)
    NULORMANY       reduce using rule 66 (miniexpr -> .)
    LCURLY          reduce using rule 66 (miniexpr -> .)
    WILDCARD        reduce using rule 66 (miniexpr -> .)
    BARSS           reduce using rule 66 (miniexpr -> .)
    BARLS           reduce using rule 66 (miniexpr -> .)
    BARSW           reduce using rule 66 (miniexpr -> .)
    BARLW           reduce using rule 66 (miniexpr -> .)
    BARSD           reduce using rule 66 (miniexpr -> .)
    BARLD           reduce using rule 66 (miniexpr -> .)
    BARN            reduce using rule 66 (miniexpr -> .)
    BART            reduce using rule 66 (miniexpr -> .)
    SPACE           reduce using rule 66 (miniexpr -> .)
    CHAR            reduce using rule 66 (miniexpr -> .)
    LITERALBAR      reduce using rule 66 (miniexpr -> .)
    MINUS           reduce using rule 66 (miniexpr -> .)
    LBRACKET        reduce using rule 66 (miniexpr -> .)
    EXCEPTOPTS      reduce using rule 66 (miniexpr -> .)
    END             reduce using rule 66 (miniexpr -> .)
    OR              reduce using rule 66 (miniexpr -> .)
    $end            reduce using rule 66 (miniexpr -> .)
    RPARENTHESIS    reduce using rule 66 (miniexpr -> .)

    miniexpr                       shift and go to state 10

state 7

    (51) expr -> expr miniexpr . expropt
    (52) expr -> expr miniexpr .
    (65) miniexpr -> miniexpr . wtfamidoinghere quantifier
    (47) expropt -> . NULORONE
    (48) expropt -> .
    (62) wtfamidoinghere -> . phrase state
    (63) wtfamidoinghere -> . capture_group
    (64) wtfamidoinghere -> .
    (4) phrase -> . phrase state
    (5) phrase -> .
    (54) capture_group -> . LPARENTHESIS expr RPARENTHESIS
    (55) capture_group -> . LPARENTHESIS EXCEPTCAPTURE expr RPARENTHESIS
    (56) capture_group -> . LPARENTHESIS EXCEPTLOOKAHEADPOS expr RPARENTHESIS
    (57) capture_group -> . LPARENTHESIS EXCEPTLOOKAHEADNEG expr RPARENTHESIS
    (58) capture_group -> . LPARENTHESIS EXCEPTLOOKBEHINDPOS expr RPARENTHESIS
    (59) capture_group -> . LPARENTHESIS EXCEPTLOOKBEHINDNEG expr RPARENTHESIS

  ! shift/reduce conflict for NULORONE resolved as shift
  ! reduce/reduce conflict for END resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for OR resolved using rule 48 (expropt -> .)
  ! shift/reduce conflict for NULORONE resolved as shift
  ! reduce/reduce conflict for LPARENTHESIS resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for ONEORMANY resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for NULORMANY resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for LCURLY resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for WILDCARD resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for BARSS resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for BARLS resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for BARSW resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for BARLW resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for BARSD resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for BARLD resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for BARN resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for BART resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for SPACE resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for CHAR resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for LITERALBAR resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for MINUS resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for LBRACKET resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for EXCEPTOPTS resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for $end resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for RPARENTHESIS resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for ONEORMANY resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for NULORMANY resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for LCURLY resolved using rule 48 (expropt -> .)
  ! shift/reduce conflict for NULORONE resolved as shift
  ! reduce/reduce conflict for LPARENTHESIS resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for WILDCARD resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for BARSS resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for BARLS resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for BARSW resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for BARLW resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for BARSD resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for BARLD resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for BARN resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for BART resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for SPACE resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for CHAR resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for LITERALBAR resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for MINUS resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for LBRACKET resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for EXCEPTOPTS resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for END resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for OR resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for $end resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for RPARENTHESIS resolved using rule 48 (expropt -> .)
  ! reduce/reduce conflict for WILDCARD resolved using rule 5 (phrase -> .)
  ! reduce/reduce conflict for BARSS resolved using rule 5 (phrase -> .)
  ! reduce/reduce conflict for BARLS resolved using rule 5 (phrase -> .)
  ! reduce/reduce conflict for BARSW resolved using rule 5 (phrase -> .)
  ! reduce/reduce conflict for BARLW resolved using rule 5 (phrase -> .)
  ! reduce/reduce conflict for BARSD resolved using rule 5 (phrase -> .)
  ! reduce/reduce conflict for BARLD resolved using rule 5 (phrase -> .)
  ! reduce/reduce conflict for BARN resolved using rule 5 (phrase -> .)
  ! reduce/reduce conflict for BART resolved using rule 5 (phrase -> .)
  ! reduce/reduce conflict for SPACE resolved using rule 5 (phrase -> .)
  ! reduce/reduce conflict for CHAR resolved using rule 5 (phrase -> .)
  ! reduce/reduce conflict for LITERALBAR resolved using rule 5 (phrase -> .)
  ! reduce/reduce conflict for MINUS resolved using rule 5 (phrase -> .)
  ! reduce/reduce conflict for LBRACKET resolved using rule 5 (phrase -> .)
  ! reduce/reduce conflict for EXCEPTOPTS resolved using rule 5 (phrase -> .)
  ! shift/reduce conflict for LPARENTHESIS resolved as shift
    NULORONE        shift and go to state 13
    END             reduce using rule 48 (expropt -> .)
    OR              reduce using rule 48 (expropt -> .)
    ONEORMANY       reduce using rule 48 (expropt -> .)
    NULORMANY       reduce using rule 48 (expropt -> .)
    LCURLY          reduce using rule 48 (expropt -> .)
    $end            reduce using rule 48 (expropt -> .)
    RPARENTHESIS    reduce using rule 48 (expropt -> .)
    WILDCARD        reduce using rule 5 (phrase -> .)
    BARSS           reduce using rule 5 (phrase -> .)
    BARLS           reduce using rule 5 (phrase -> .)
    BARSW           reduce using rule 5 (phrase -> .)
    BARLW           reduce using rule 5 (phrase -> .)
    BARSD           reduce using rule 5 (phrase -> .)
    BARLD           reduce using rule 5 (phrase -> .)
    BARN            reduce using rule 5 (phrase -> .)
    BART            reduce using rule 5 (phrase -> .)
    SPACE           reduce using rule 5 (phrase -> .)
    CHAR            reduce using rule 5 (phrase -> .)
    LITERALBAR      reduce using rule 5 (phrase -> .)
    MINUS           reduce using rule 5 (phrase -> .)
    LBRACKET        reduce using rule 5 (phrase -> .)
    EXCEPTOPTS      reduce using rule 5 (phrase -> .)
    LPARENTHESIS    shift and go to state 16

  ! END             [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! OR              [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! NULORONE        [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! LPARENTHESIS    [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! ONEORMANY       [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! NULORMANY       [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! LCURLY          [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! WILDCARD        [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! BARSS           [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! BARLS           [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! BARSW           [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! BARLW           [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! BARSD           [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! BARLD           [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! BARN            [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! BART            [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! SPACE           [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! CHAR            [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! LITERALBAR      [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! MINUS           [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! LBRACKET        [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! EXCEPTOPTS      [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! $end            [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! RPARENTHESIS    [ reduce using rule 52 (expr -> expr miniexpr .) ]
  ! NULORONE        [ reduce using rule 48 (expropt -> .) ]
  ! LPARENTHESIS    [ reduce using rule 48 (expropt -> .) ]
  ! WILDCARD        [ reduce using rule 48 (expropt -> .) ]
  ! BARSS           [ reduce using rule 48 (expropt -> .) ]
  ! BARLS           [ reduce using rule 48 (expropt -> .) ]
  ! BARSW           [ reduce using rule 48 (expropt -> .) ]
  ! BARLW           [ reduce using rule 48 (expropt -> .) ]
  ! BARSD           [ reduce using rule 48 (expropt -> .) ]
  ! BARLD           [ reduce using rule 48 (expropt -> .) ]
  ! BARN            [ reduce using rule 48 (expropt -> .) ]
  ! BART            [ reduce using rule 48 (expropt -> .) ]
  ! SPACE           [ reduce using rule 48 (expropt -> .) ]
  ! CHAR            [ reduce using rule 48 (expropt -> .) ]
  ! LITERALBAR      [ reduce using rule 48 (expropt -> .) ]
  ! MINUS           [ reduce using rule 48 (expropt -> .) ]
  ! LBRACKET        [ reduce using rule 48 (expropt -> .) ]
  ! EXCEPTOPTS      [ reduce using rule 48 (expropt -> .) ]
  ! ONEORMANY       [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! NULORMANY       [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! LCURLY          [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! NULORONE        [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! LPARENTHESIS    [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! WILDCARD        [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! BARSS           [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! BARLS           [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! BARSW           [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! BARLW           [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! BARSD           [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! BARLD           [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! BARN            [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! BART            [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! SPACE           [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! CHAR            [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! LITERALBAR      [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! MINUS           [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! LBRACKET        [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! EXCEPTOPTS      [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! END             [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! OR              [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! $end            [ reduce using rule 64 (wtfamidoinghere -> .) ]
  ! RPARENTHESIS    [ reduce using rule 64 (wtfamidoinghere -> .) ]

    expropt                        shift and go to state 11
    wtfamidoinghere                shift and go to state 12
    phrase                         shift and go to state 14
    capture_group                  shift and go to state 15

state 8

    (17) end -> END .

    $end            reduce using rule 17 (end -> END .)


state 9

    (60) alternative -> OR .

    NULORONE        reduce using rule 60 (alternative -> OR .)
    LPARENTHESIS    reduce using rule 60 (alternative -> OR .)
    ONEORMANY       reduce using rule 60 (alternative -> OR .)
    NULORMANY       reduce using rule 60 (alternative -> OR .)
    LCURLY          reduce using rule 60 (alternative -> OR .)
    WILDCARD        reduce using rule 60 (alternative -> OR .)
    BARSS           reduce using rule 60 (alternative -> OR .)
    BARLS           reduce using rule 60 (alternative -> OR .)
    BARSW           reduce using rule 60 (alternative -> OR .)
    BARLW           reduce using rule 60 (alternative -> OR .)
    BARSD           reduce using rule 60 (alternative -> OR .)
    BARLD           reduce using rule 60 (alternative -> OR .)
    BARN            reduce using rule 60 (alternative -> OR .)
    BART            reduce using rule 60 (alternative -> OR .)
    SPACE           reduce using rule 60 (alternative -> OR .)
    CHAR            reduce using rule 60 (alternative -> OR .)
    LITERALBAR      reduce using rule 60 (alternative -> OR .)
    MINUS           reduce using rule 60 (alternative -> OR .)
    LBRACKET        reduce using rule 60 (alternative -> OR .)
    EXCEPTOPTS      reduce using rule 60 (alternative -> OR .)
    END             reduce using rule 60 (alternative -> OR .)
    OR              reduce using rule 60 (alternative -> OR .)
    $end            reduce using rule 60 (alternative -> OR .)
    RPARENTHESIS    reduce using rule 60 (alternative -> OR .)


state 10

    (49) expr -> expr alternative miniexpr . expropt
    (50) expr -> expr alternative miniexpr .
    (65) miniexpr -> miniexpr . wtfamidoinghere quantifier
    (47) expropt -> . NULORONE
    (48) expropt -> .
    (62) wtfamidoinghere -> . phrase state
    (63) wtfamidoinghere -> . capture_group
    (64) wtfamidoinghere -> .
    (4) phrase -> . phrase state
    (5) phrase -> .
    (54) capture_group -> . LPARENTHESIS expr RPARENTHESIS
    (55) capture_group -> . LPARENTHESIS EXCEPTCAPTURE expr RPARENTHESIS
    (56) capture_group -> . LPARENTHESIS EXCEPTLOOKAHEADPOS expr RPARENTHESIS
    (57) capture_group -> . LPARENTHESIS EXCEPTLOOKAHEADNEG expr RPARENTHESIS
    (58) capture_group -> . LPARENTHESIS EXCEPTLOOKBEHINDPOS expr RPARENTHESIS
    (59) capture_group -> . LPARENTHESIS EXCEPTLOOKBEHINDNEG expr RPARENTHESIS
